[package]
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
description = "A library which has characteristic functions for a variety of distributions."
edition = "2018"
homepage = "https://github.com/danielhstahl/cf_functions_rust"
license = "MIT"
name = "cf_functions"
readme = "README.md"
repository = "https://github.com/danielhstahl/cf_functions_rust"
version = "0.15.0"
[dependencies]
num-complex = "0.2"
special = "0.7"

[dev-dependencies]
approx = "0.2.0"
cf_dist_utils = "0.10"
criterion = "0.2"
fang_oost = "0.50"
fang_oost_option = "0.31"

[[bench]]
harness = false
name = "mgf_compare"

[badges]
travis-ci = {repository = "danielhstahl/cf_functions_rust"}
